--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,9 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
 <title>정부 복지지원 서비스 검색기</title>
 <meta name="color-scheme" content="light dark" />
+  <!-- prevent auto-translate CSS injection warnings and favicon 404 -->
+  <meta name="google" content="notranslate" />
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><text y='14' font-size='14'>🏛️</text></svg>">
 <style>
 :root{
   --bg:#0b0c0e; --surface:#111317; --surface-2:#16181d; --border:#262a33;
